simplify description, use xacro, update launch file

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,9 +6,7 @@ find_package(catkin REQUIRED)
 
 catkin_package()
 
-find_package(roslaunch)
-
-foreach(dir config launch meshes urdf)
+foreach(dir launch meshes urdf rviz)
 	install(DIRECTORY ${dir}/
 		DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}/${dir})
 endforeach(dir)
