--- a/package.xml
+++ b/package.xml
@@ -1,20 +1,23 @@
-<package>
+<package format="2">
   <name>leo_description</name>
-  <version>1.0.0</version>
+  <version>0.0.0</version>
   <description>
-    <p>URDF Description package for leo_description</p>
-    <p>This package contains configuration data, 3D models and launch files
-for leo_description robot</p>
+    URDF Description package for Leo Rover
   </description>
-  <author>TODO</author>
-  <maintainer email="TODO@email.com" />
-  <license>BSD</license>
+
+  <author>Błażej Sowa</author>
+
+  <maintainer email="support@fictionlab.pl">fictionlab</maintainer>
+
+  <license>MIT</license>
+
   <buildtool_depend>catkin</buildtool_depend>
-  <depend>roslaunch</depend>
-  <depend>robot_state_publisher</depend>
-  <depend>rviz</depend>
-  <depend>joint_state_publisher</depend>
-  <depend>gazebo</depend>
+
+  <exec_depend>roslaunch</exec_depend>
+  <exec_depend>robot_state_publisher</exec_depend>
+  <exec_depend>joint_state_publisher</exec_depend>
+  <exec_depend>rviz</exec_depend>
+
   <export>
     <architecture_independent />
   </export>
