--- a/package.xml
+++ b/package.xml
@@ -13,10 +13,9 @@
 
   <buildtool_depend>catkin</buildtool_depend>
 
-  <exec_depend>roslaunch</exec_depend>
   <exec_depend>robot_state_publisher</exec_depend>
   <exec_depend>joint_state_publisher</exec_depend>
-  <exec_depend>rviz</exec_depend>
+  <!-- <exec_depend>rviz</exec_depend> -->
 
   <export>
     <architecture_independent />
