--- a/package.xml
+++ b/package.xml
@@ -15,9 +15,10 @@
 
   <exec_depend>robot_state_publisher</exec_depend>
   <exec_depend>joint_state_publisher</exec_depend>
-  <!-- <exec_depend>rviz</exec_depend> -->
+  
+  <exec_depend>rviz</exec_depend>
+  <exec_depend>joint_state_publisher_gui</exec_depend>
 
   <export>
-    <architecture_independent />
   </export>
 </package>
