--- a/package.xml
+++ b/package.xml
@@ -13,6 +13,7 @@
 
   <buildtool_depend>catkin</buildtool_depend>
 
-  <export>
-  </export>
+  <exec_depend>xacro</exec_depend>
+  <exec_depend>robot_state_publisher</exec_depend>
+
 </package>
