leo_description: Update package manifest

--- a/leo_description/package.xml
+++ b/leo_description/package.xml
@@ -5,11 +5,14 @@
     URDF Description package for Leo Rover
   </description>
 
-  <author>Błażej Sowa</author>
-
-  <maintainer email="support@fictionlab.pl">fictionlab</maintainer>
+  <maintainer email="blazej@turtlerover.com">Błażej Sowa</maintainer>
+  <author email="blazej@turtlerover.com">Błażej Sowa</author>
 
   <license>MIT</license>
+
+  <url type="website">http://wiki.ros.org/leo_description</url>
+  <url type="bugtracker">https://github.com/LeoRover/leo_common/issues</url>
+  <url type="repository">https://github.com/LeoRover/leo_common</url>
 
   <buildtool_depend>catkin</buildtool_depend>
 
