--- a/leo_teleop/package.xml
+++ b/leo_teleop/package.xml
@@ -17,5 +17,6 @@
 
   <exec_depend>joy</exec_depend>
   <exec_depend>teleop_twist_joy</exec_depend>
+  <exec_depend>teleop_twist_keyboard</exec_depend>
 
 </package>
