--- a/leo_teleop/CMakeLists.txt
+++ b/leo_teleop/CMakeLists.txt
@@ -1,14 +1,21 @@
-cmake_minimum_required(VERSION 2.8.3)
+cmake_minimum_required(VERSION 3.0.2)
 project(leo_teleop)
 
 find_package(catkin)
 
 catkin_package()
 
-install(DIRECTORY launch/
+install(
+  DIRECTORY launch/
   DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}/launch
 )
 
-install(DIRECTORY config/
+install(
+  DIRECTORY config/
   DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}/config
+)
+
+install(
+  PROGRAMS scripts/key_teleop
+  DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}/scripts
 )
