--- a/leo_description/CMakeLists.txt
+++ b/leo_description/CMakeLists.txt
@@ -13,3 +13,8 @@ install(
     urdf
   DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
 )
+
+if(CATKIN_ENABLE_TESTING)
+  find_package(rostest REQUIRED)
+  add_rostest(test/xacro.test)
+endif()
