--- a/leo_description/package.xml
+++ b/leo_description/package.xml
@@ -19,4 +19,6 @@
   <exec_depend>xacro</exec_depend>
   <exec_depend>robot_state_publisher</exec_depend>
 
+  <test_depend>rostest</test_depend>
+
 </package>
