--- a/leo/package.xml
+++ b/leo/package.xml
@@ -6,8 +6,8 @@
     Metapackage of software for Leo Rover common to the robot and ROS desktop
   </description>
 
-  <maintainer email="blazej@turtlerover.com">Błażej Sowa</maintainer>
-  <author email="blazej@turtlerover.com">Błażej Sowa</author>
+  <maintainer email="support@fictionlab.pl">Fictionlab</maintainer>
+  <author email="blazej@fictionlab.pl">Błażej Sowa</author>
 
   <license>MIT</license>
 
