--- a/leo_description/package.xml
+++ b/leo_description/package.xml
@@ -5,8 +5,8 @@
     URDF Description package for Leo Rover
   </description>
 
-  <maintainer email="blazej@turtlerover.com">Błażej Sowa</maintainer>
-  <author email="blazej@turtlerover.com">Błażej Sowa</author>
+  <maintainer email="support@fictionlab.pl">Fictionlab</maintainer>
+  <author email="blazej@fictionlab.pl">Błażej Sowa</author>
 
   <license>MIT</license>
 
