--- a/leo_msgs/CMakeLists.txt
+++ b/leo_msgs/CMakeLists.txt
@@ -8,6 +8,7 @@ find_package(catkin REQUIRED COMPONENTS
 
 add_message_files(FILES
   Imu.msg
+  WheelOdomMecanum.msg
   WheelOdom.msg
   WheelStates.msg
 )
