--- a/leo_description/package.xml
+++ b/leo_description/package.xml
@@ -7,6 +7,7 @@
 
   <maintainer email="support@fictionlab.pl">Fictionlab</maintainer>
   <author email="blazej@fictionlab.pl">Błażej Sowa</author>
+  <author email="aleks@fictionlab.pl">Aleksander Szymański</author>
 
   <license>MIT</license>
 
